# obsidian2org-roam

./: README.md  README.org  main.py  pyproject.toml
obsidian2org_roam/: main.py
